--- a/FactorioBlueprints/FactorioBlueprints.csproj
+++ b/FactorioBlueprints/FactorioBlueprints.csproj
@@ -35,6 +35,9 @@
     <Reference Include="DotNetZip, Version=1.13.2.0, Culture=neutral, PublicKeyToken=6583c7c814667745, processorArchitecture=MSIL">
       <HintPath>..\packages\DotNetZip.1.13.2\lib\net40\DotNetZip.dll</HintPath>
     </Reference>
+    <Reference Include="EsseivaN_Lib">
+      <HintPath>..\..\..\..\EsseivaN\libs\EsseivaN_Lib.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
